# HU-DAV

./: .gitignore  README.md  config.toml  notes_wk6.md  notes_wk7.md  pyproject.toml
data/meta/: resident_metadata.json
data/processed/: whatsapp-20250910-235500.parquet
notebooks/: 02-Gino-comparing_categories.ipynb  02-Gino-comparing_categories_emojies.ipynb  02-Gino2-Final-comparing_categories_emojies.ipynb  02-comparing_categories.ipynb  03-Gino-time.ipynb  03-Gino-time_berichten_camera.ipynb  03-Gino-time_berichten_camera_v2.ipynb  03-Gino-time_sentiment.ipynb  03-Gino-time_v2.ipynb  03-Gino-time_v3.ipynb  03-Gino-time_v4.ipynb  03-time.ipynb  03.2-statistics-of-time.ipynb  04.1-Gino-distributions.ipynb  04.1-distributions.ipynb  04.1.2-Gino-distributions.ipynb  04.1.3-Gino-distribution.ipynb  04.1.4-Gino-distribution.ipynb  04.1.5-Gino-Final-distribution.ipynb  04.1.5-Gino-distribution.ipynb  04.2-distribution_fitting.ipynb  05.1-Gino-relationships.ipynb  05.1-relationships.ipynb  05.2-Gino-relationships.ipynb  05.2-correlation.ipynb  05.3-Gino-relationships.ipynb  05.4-Gino-relationships.ipynb  05.5-Gino-relationships.ipynb  05.6-Gino-relationships_final.ipynb  05.7-Gino-relationships.ipynb  06.1-Gino-dimensionality_reduction.ipynb  06.1-Gino2-dimensionality_reduction_wk6.ipynb  06.2-Gino-modelling.ipynb  06.2-Gino-wa-modelling.ipynb  06.2-Gino-wa-modelling_top15.ipynb  06.2-Gino10_final_facilities-modelling.ipynb  06.2-Gino10a_exclamation_facilities-modelling copy.ipynb  06.2-Gino10b_exclamation_facilities-modelling.ipynb  06.2-Gino11_sentiment-modelling.ipynb  06.2-Gino7_final_facilities-modelling.ipynb  (+24 more)
src/wa_analyzer/: apartment_community_wk2.py  apartment_community_wk3.py  apartment_community_wk4.py  apartment_community_wk5.py  apartment_community_wk6.py  config_loader.py  data_handler.py  data_handler_meta_data.py  logger_setup.py  model.py  streamlit_dashboard_ac_wk2.py  streamlit_dashboard_ac_wk4.py  streamlit_dashboard_ac_wk5.py  streamlit_dashboard_ac_wk6.py
