[project]
name = "wa-analyzer-appartment-community"
version = "0.4.1"
description = "Code for the Master of Applied Data Science course Data Analysis and Visualization"
authors = [
    {name = "Raoul Grouls", email = "Raoul.Grouls@han.nl"},
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckdb>=1.3.2",
    "emoji>=2.15.0",
    "mads-datasets>=0.3.14",
    "nltk>=3.9.1",
    "pandasql>=0.7.3",
    "textblob>=0.19.0",
    "textblob-nl>=0.0.1",
    "torchaudio>=2.2.2",
    "torchvision>=0.17.2",
    "transformers>=4.50.3"
]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
"analyzer" = "wa_analyzer.preprocess:main"
"graphdashboard" = "wa_analyzer.network_cli:main"
"apartment_community_wk2" = "wa_analyzer.apartment_community_wk2:main"
"apartment_community_wk3" = "wa_analyzer.apartment_community_wk3:main"
"apartment_community_wk4" = "wa_analyzer.apartment_community_wk4:main"
"apartment_community_wk5" = "wa_analyzer.apartment_community_wk5:main"
"apartment_community_wk6" = "wa_analyzer.apartment_community_wk6:main"

[project.urls]
GitHub = "https://github.com/raoulg/MADS-DAV"

[project.optional-dependencies]
huggingface = [
    "sentence-transformers>=3.3.1",
    "torch==2.2.2",
    "transformers>=4.47.1",
]
plotting = [
    "mads-datasets>=0.3.14",
    "plotly>=5.24.1",
    "streamlit>=1.41.1",
]


[dependency-groups]
dev = [
    "black[jupyter]>=24.10.0",
    "isort>=5.13.2",
    "jupyter>=1.1.1",
    "mypy>=1.14.1",
    "notebooktester>=0.2.0",
    "ruff>=0.8.6",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wa_analyzer"]
sources = ["src"]


[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
pretty = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "C4", "PT", "S"]
